syntax = "proto3";
package emortal.grpc.messagehandler;

option java_package = "dev.emortal.api.grpc.messagehandler";
option java_outer_classname = "MessageHandlerProto";
option go_package = "github.com/emortalmc/proto-specs/gen/go/grpc/messagehandler";

import "message_handler/models.proto";

service MessageHandler {
  rpc SendPrivateMessage(PrivateMessageRequest) returns (PrivateMessageResponse);
}

message PrivateMessageRequest {
  model.messagehandler.PrivateMessage message = 1;
}

message PrivateMessageResponse {
  // The message may have been modified for some safety reasons
  model.messagehandler.PrivateMessage message = 1;
}

message PrivateMessageErrorResponse {
  enum Reason {
    PLAYER_NOT_ONLINE = 0;
    PRIVACY_BLOCKED = 1;
    YOU_BLOCKED = 2;
  }

  Reason reason = 1;
}