syntax = "proto3";
package emortal.grpc;

option java_package = "dev.emortal.api.grpc.privatemessage";
option java_outer_classname = "PrivateMessageProto";
option go_package = "github.com/emortalmc/proto-specs/gen/go/grpc/privatemessage";

import "private_message/models.proto";

service PrivateMessage {
  rpc SendPrivateMessage(PrivateMessageRequest) returns (PrivateMessageResponse);
}

message PrivateMessageRequest {
  model.PrivateMessage message = 1;
}

message PrivateMessageResponse {
  // The message may have been modified for some safety reasons
  model.PrivateMessage message = 1;
}

message PrivateMessageErrorResponse {
  enum Reason {
    PLAYER_NOT_ONLINE = 0;
    PRIVACY_BLOCKED = 1;
    YOU_BLOCKED = 2;
  }

  Reason reason = 1;
}